[package]
name = "dping-rs"
version = "0.1.0"
edition = "2021"
description = "High-frequency ping tool for network monitoring"
authors = ["dping-rs team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10.1"
socket2 = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
